--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
             "homepage": "https://pixpa.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/pixpateam/agent"
+        }
+    ],
     "require": {
         "php": ">=5.6",
         "mobiledetect/mobiledetectlib": "^4.8",
