--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
         "jaybizzle/crawler-detect": "^1.2"
         
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0|^6.0|^7.0",
+        "php-coveralls/php-coveralls": "^2.1"
+    },
     "autoload": {
         "psr-4": {
             "Pixpa\\Agent\\": "src/"
