--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
                 "Pixpa\\Agent\\AgentServiceProvider"
             ],
             "aliases": {
-                "Agent": "Pixpa\\Agent\\Agent"
+                "Agent": "Pixpa\\Agent\\Facades\\Agent"
             }
         }
     },
